# sbol-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/sbol/: Cargo.toml  build.rs  rules.toml
crates/sbol-bench/: Cargo.toml  build.rs
crates/sbol-bench/src/: bench.rs  cli.rs  main.rs  matrix.rs  report.rs
crates/sbol-cli/: Cargo.toml  README.md  build.rs
crates/sbol-cli/src/: cli.rs  main.rs  output.rs  sarif.rs  style.rs
crates/sbol-cli/src/commands/: convert.rs  diff.rs  downgrade.rs  import.rs  mod.rs  ontology.rs  rules.rs  upgrade.rs  validate.rs
crates/sbol-cli/tests/: cli.rs  cli_color.rs  cli_convert.rs  cli_diff.rs  cli_rules_list.rs  cli_validate.rs  cli_validate_sbol2.rs  downgrade.rs  import_fasta.rs  import_genbank.rs  upgrade.rs
crates/sbol-cli/tests/common/: mod.rs
crates/sbol-convert/: Cargo.toml
crates/sbol-convert/examples/: sbol3_downgrade.rs  synbiohub_upgrade.rs
crates/sbol-convert/src/: lib.rs  sbol2_vocab.rs  uri.rs
crates/sbol-convert/src/downgrade/: analyze.rs  dispatch.rs  emit.rs  helpers.rs  mod.rs  predicate.rs  preflight.rs  values.rs
crates/sbol-convert/src/upgrade/: emit.rs  engine.rs  identity.rs  mod.rs  values.rs
crates/sbol-convert/tests/: corpus_round_trip.rs  cross_impl_reference.rs  downgrade_dual_role.rs  downgrade_round_trip.rs  downgrade_semantic.rs  interop_backport.rs  upgrade_conformance.rs  upgrade_fixtures.rs  upgrade_synthesis.rs  upgrade_translation.rs
crates/sbol-convert/tests/common/: corpus.rs  downgrade.rs  mod.rs  upgrade.rs
crates/sbol-core/: Cargo.toml  README.md
crates/sbol-core/src/: diff.rs  document.rs  error.rs  identity.rs  iri.rs  lib.rs  object.rs  prelude.rs  schema.rs  syntax.rs
crates/sbol-core/src/validation/: blocker.rs  coverage.rs  mod.rs  options.rs  output.rs  report.rs  resolver.rs  rule_status.rs
crates/sbol-fasta/: Cargo.toml  README.md
crates/sbol-fasta/examples/: fasta_to_sbol3.rs
crates/sbol-fasta/src/: alphabet.rs  exporter.rs  importer.rs  lib.rs  parser.rs
crates/sbol-fasta/src/exporter/: tests.rs
crates/sbol-fasta/tests/: biopython_oracle.rs  conformance.rs  edge.rs  import.rs
crates/sbol-fasta/tests/oracle/: Dockerfile  emit_records.py  regenerate.sh
crates/sbol-genbank/: Cargo.toml  README.md
crates/sbol-genbank/examples/: genbank_to_sbol3.rs
crates/sbol-genbank/src/: exporter.rs  feature_map.rs  importer.rs  lib.rs
crates/sbol-genbank/src/exporter/: tests.rs
crates/sbol-genbank/tests/: biopython_oracle.rs  conformance.rs  import.rs  malformed.rs  multispan.rs
crates/sbol-ontology/: Cargo.toml  LICENSE-APACHE  README.md
crates/sbol-ontology/data/: ontology_sources.tsv  sbol3_ontology_facts.tsv
crates/sbol-ontology/src/: cache.rs  download.rs  facts.rs  lib.rs  parser.rs  registry.rs
crates/sbol-py/: Cargo.toml  README.md  pyproject.toml
crates/sbol-py/benchmarks/: vs_pysbol3.py
crates/sbol-py/src/: lib.rs
crates/sbol-py/tests/: test_basic.py  test_phase2.py  test_sbol2.py
crates/sbol-rdf/: Cargo.toml  README.md
crates/sbol-rdf/src/: error.rs  format.rs  graph.rs  lib.rs  terms.rs  traits.rs
crates/sbol-rdf/tests/: basic.rs
crates/sbol-rulegen/: Cargo.toml  README.md
crates/sbol-rulegen/src/: lib.rs
crates/sbol-utilities/: Cargo.toml
crates/sbol-utilities/examples/: toggle_switch.rs
crates/sbol-utilities/src/: combinatorial.rs  compute_sequence.rs  lib.rs  tests.rs  verbs.rs
crates/sbol-utilities/tests/: toggle_switch.rs
crates/sbol/benches/: parse_validate.rs  validate.rs
crates/sbol/examples/: build_component.rs  cross_document_resolution.rs  inspect_features.rs  preserve_extensions.rs  read_validate.rs  sbol3_downgrade.rs  synbiohub_upgrade.rs  validate_with_resolver.rs
crates/sbol/src/: conformance.rs  constants.rs  document.rs  error.rs  identity.rs  iri_util.rs  lib.rs  model.rs  object.rs  owl_conformance.rs  prelude.rs  resolve.rs  sbol2_vocab.rs  schema.rs  vocab.rs
crates/sbol/tests/: basic.rs  builders.rs  client_api.rs  conformance_report.rs  cross_impl.rs  cross_impl_pysbol3.rs  downgrade.rs  downgrade_dual_role.rs  downgrade_round_trip.rs  downgrade_semantic.rs  external_validation.rs  model_traversal.rs  ontology_extensions.rs  properties.rs  public_resolver.rs  sbol3_fixtures.rs  sbol_owl3_conformance.rs  sbol_owl3_conformance_report.rs  schema_consistency.rs  traversal.rs  upgrade.rs  upgrade_conformance.rs  upgrade_fixtures.rs  upgrade_synthesis.rs  upgrade_translation.rs  validation_output.rs  validation_rules.rs
crates/sbol2/: Cargo.toml  build.rs  rules.toml
crates/sbol2/src/: conformance.rs  constants.rs  document.rs  error.rs  identity.rs  lib.rs  model.rs  object.rs  prelude.rs  vocab.rs
crates/sbol2/tests/: builders.rs  client_api.rs  conformance.rs  conformance_report.rs  cross_impl.rs  invalid_files.rs  invalid_files_deferred.in  roundtrip.rs  rule_cases.rs  validation_rules.rs
crates/sbol3/: Cargo.toml  NOTICE  build.rs
crates/sbol3/benches/: parse_validate.rs  validate.rs
crates/sbol3/examples/: build_component.rs  cross_document_resolution.rs  diff_documents.rs  inspect_features.rs  preserve_extensions.rs  read_validate.rs  sbol3_downgrade.rs  synbiohub_upgrade.rs  toggle_switch_arena.rs  validate_with_resolver.rs
crates/sbol3/src/: conformance.rs  constants.rs  design.rs  document.rs  identity.rs  lib.rs  object.rs  owl_conformance.rs  prelude.rs  resolve.rs  schema.rs  specification.rs  vocab.rs
crates/sbol3/tests/: basic.rs  builders.rs  client_api.rs  conformance_report.rs  cross_impl.rs  cross_impl_pysbol3.rs  downgrade_dual_role.rs  downgrade_round_trip.rs  downgrade_semantic.rs  external_validation.rs  model_traversal.rs  ontology_extensions.rs  properties.rs  public_resolver.rs  sbol3_fixtures.rs  sbol_owl3_conformance.rs  sbol_owl3_conformance_report.rs  schema_consistency.rs  traversal.rs  upgrade_conformance.rs  upgrade_fixtures.rs  upgrade_synthesis.rs  upgrade_translation.rs  validation_output.rs  validation_rules.rs
docs/: README.md  (+20 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_turtle.rs  round_trip.rs  round_trip_validate.rs  validate.rs
(+607 files in other folders)
