[workspace]
members = [
    "crates/sbol",
    "crates/sbol3",
    "crates/sbol-bench",
    "crates/sbol-core",
    "crates/sbol-rulegen",
    "crates/sbol-cli",
    "crates/sbol-fasta",
    "crates/sbol-genbank",
    "crates/sbol-ontology",
    "crates/sbol-rdf",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/marpaia/sbol-rs"
homepage = "https://github.com/marpaia/sbol-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
gb-io = "0.9"
oxjsonld = "0.2.5"
oxrdf = "0.3.3"
oxrdfio = "0.2.5"
proptest = "1"
sbol = { path = "crates/sbol", version = "0.2.1" }
sbol3 = { path = "crates/sbol3", version = "0.2.1" }
sbol-core = { path = "crates/sbol-core", version = "0.2.1" }
sbol-rulegen = { path = "crates/sbol-rulegen", version = "0.2.1" }
sbol-fasta = { path = "crates/sbol-fasta", version = "0.2.1" }
sbol-genbank = { path = "crates/sbol-genbank", version = "0.2.1" }
sbol-ontology = { path = "crates/sbol-ontology", version = "0.2.1" }
sbol-rdf = { path = "crates/sbol-rdf", version = "0.2.1" }
sha3 = "0.10"
thiserror = "2"
ureq = "2.12"
