[package]
name = "sbol-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
default-run = "sbol-bench"
description = "Cross-implementation performance benchmarks for sbol-rs against pySBOL3, libSBOLj3, and sboljs."

[dependencies]
clap = { workspace = true, features = ["env"] }
sbol.workspace = true
sbol-rdf.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
