[package]
name = "sbol-bench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
default-run = "sbol-bench"
description = "Dual-version (SBOL 2 + SBOL 3) cross-implementation performance benchmarks for sbol-rs against libSBOLj, pySBOL3, libSBOLj3, and sboljs."

[dependencies]
clap = { workspace = true, features = ["env"] }
sbol = { workspace = true, features = ["v2"] }
sbol-rdf.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
