[package]
name = "sbol-cli"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Command-line tool for working with SBOL 3 documents."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol-cli"
license.workspace = true
readme = "README.md"
keywords = ["sbol", "synthetic-biology", "rdf", "cli"]
categories = ["command-line-utilities", "science"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "sbol"
path = "src/main.rs"

[dependencies]
clap.workspace = true
sbol = { workspace = true, features = ["v2"] }
sbol-fasta.workspace = true
sbol-genbank.workspace = true
sbol-ontology.workspace = true
serde_json = "1"
terminal_size = "0.4"

[features]
default = []
sarif = []
http-resolver = ["sbol/http-resolver"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"
