[package]
name = "sbol-utilities"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Biology-first construction helpers and algorithms for sbol-rs, in the spirit of sbol_utilities."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol-utilities"
license.workspace = true
readme = "../../README.md"
keywords = ["sbol", "synthetic-biology", "rdf"]
categories = ["science"]

[dependencies]
sbol3.workspace = true
thiserror.workspace = true
