[package]
name = "sbol"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Rust implementation of the SBOL 3.1.0 specification."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol"
license.workspace = true
readme = "../../README.md"
keywords = ["sbol", "synthetic-biology", "rdf"]
categories = ["science", "parser-implementations"]
exclude = ["tests/", "src/bin/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sbol-ontology.workspace = true
sbol-rdf.workspace = true
sha3.workspace = true
thiserror.workspace = true
ureq = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
proptest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }

[[bench]]
name = "validate"
harness = false

[[bench]]
name = "parse_validate"
harness = false

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }

[features]
http-resolver = ["dep:ureq"]

[[example]]
name = "synbiohub_upgrade"
required-features = ["http-resolver"]
