[package]
name = "sbol"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Umbrella facade for the sbol-rs ecosystem (SBOL 3 today; SBOL 2 + conversion behind features)."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol"
license.workspace = true
readme = "../../README.md"
keywords = ["sbol", "synthetic-biology", "rdf"]
categories = ["science", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sbol3.workspace = true

[features]
http-resolver = ["sbol3/http-resolver"]
