[package]
name = "sbol"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Umbrella facade for the sbol-rs ecosystem: native SBOL 2 and SBOL 3 plus 2 <-> 3 conversion, selected by cargo feature."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol"
license.workspace = true
readme = "../../README.md"
keywords = ["sbol", "synthetic-biology", "rdf"]
categories = ["science", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sbol-core.workspace = true
sbol-rdf.workspace = true
sbol2 = { workspace = true, optional = true }
sbol3 = { workspace = true, optional = true }
sbol-convert = { workspace = true, optional = true }

[features]
default = ["v3", "convert"]
v2 = ["dep:sbol2"]
v3 = ["dep:sbol3"]
convert = ["dep:sbol-convert", "v3"]
http-resolver = ["sbol3/http-resolver", "sbol-convert/http-resolver"]
