[package]
name = "sbol2"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Rust implementation of the SBOL 2.3.0 specification: typed data model, RDF I/O, and validation."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbol2"
license.workspace = true
readme = "../../README.md"
keywords = ["sbol", "synthetic-biology", "rdf"]
categories = ["science", "parser-implementations"]
exclude = ["tests/", "src/bin/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sbol-core.workspace = true
sbol-ontology.workspace = true
sbol-rdf.workspace = true
thiserror.workspace = true

[build-dependencies]
sbol-rulegen.workspace = true
